selenium-hub-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: selenium-hub
spec:
  replicas: 1
  selector:
    type: selenium-hub
  template:
    metadata:
      labels:
        type: selenium-hub
      name: selenium-hub
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ${JAVA_OPTS}
        - name: POOL_MAX
          value: ${POOL_MAX}
        - name: GRID_NEW_SESSION_WAIT_TIMEOUT
          value: ${GRID_NEW_SESSION_WAIT_TIMEOUT}
        - name: GRID_JETTY_MAX_THREADS
          value: ${GRID_JETTY_MAX_THREADS}
        - name: GRID_NODE_POLLING
          value: ${GRID_NODE_POLLING}
        - name: GRID_CLEAN_UP_CYCLE
          value: ${GRID_CLEAN_UP_CYCLE}
        - name: GRID_TIMEOUT
          value: ${GRID_TIMEOUT}
        - name: GRID_BROWSER_TIMEOUT
          value: ${GRID_BROWSER_TIMEOUT}
        - name: GRID_MAX_SESSION
          value: ${GRID_MAX_SESSION}
        - name: GRID_UNREGISTER_IF_STILL_DOWN_AFTER
          value: ${GRID_UNREGISTER_IF_STILL_DOWN_AFTER}
        image: selenium/hub
        name: master
        ports:
        - containerPort: 4444
          protocol: TCP
parameters:
  - name: JAVA_OPTS
    description: Options to pass to the java command
    value: "-Xmx512m"
  - name: POOL_MAX
    description: Max thread count for incoming and outgoing connections
    value: "30000"
  - name: GRID_NEW_SESSION_WAIT_TIMEOUT
    description: The timeout to wait for new sessions
    value: "30"
  - name: GRID_JETTY_MAX_THREADS
    description: Max Threads for Jetty server
    value: "100"
  - name: GRID_NODE_POLLING
    description: Node Polling setting
    value: "150"
  - name: GRID_CLEAN_UP_CYCLE
    description: How long to wait until cleanup on nodes
    value: "300"
  - name: GRID_TIMEOUT
    description: The timeout for the grid
    value: "300"
  - name: GRID_BROWSER_TIMEOUT
    description: The timeout for the browser
    value: "30"
  - name: GRID_MAX_SESSION
    description: How many sessions max
    value: "3"
  - name: GRID_UNREGISTER_IF_STILL_DOWN_AFTER
    description: Time to wait before unregistering nodes
    value: "500"
labels:
  selenium-hub: master
