selenium-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
spec:
  selector:
    type: selenium-hub
  type: ClusterIP
  ports:
  - name: web
    port: 4444
    targetPort: 4444
    protocol: TCP
  - name: node
    port: 5555
    targetPort: 5555
    protocol: TCP
