selenium-hub-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: selenium-hub
spec:
  host: ${HUB_ROUTE}
  port:
    targetPort: 4444
  to:
    kind: Service
    name: selenium-hub
parameters:
  - name: HUB_ROUTE
    description: Route name for the Selenium Hub
